# mailKeeper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_GUIDELINES.md  README.md  pyproject.toml
.github/scripts/: steps.csv
.github/workflows/: auto-merge.yml  ci.yml  claude-review.yml  claude.yml  next-step.yml
template_addons/create_issues/: README.md  create_issues.sh
template_addons/issue_ai_coding/: README.md  claude-review.yml
template_addons/step_AIcoding/: README.md  claude-review.yml  claude.yml
tests/: test_example.py
